board updates on page load and peer click

--- a/tictactoe/public/index.html
+++ b/tictactoe/public/index.html
@@ -65,7 +65,7 @@
       <div class="row">
         <div class="col-sm-8 col-sm-offset-2">
           <div id="wrapper">
-            <div id="board">
+            <div id="board" style="display:none">
               <ul class="clearfix" data-y="0">
                 <li data-x="0"><a href="#"></a></li>
                 <li data-x="1"><a href="#"></a></li>
